k8s/gke-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pd-mount-container
spec:
  containers:
    - name: pd-mount-container
      image: busybox
      args: [ "tail", "-f", "/dev/null" ]
      volumeMounts:
      - name: pd-volume
        mountPath: /mnt
  volumes:
  - name : pd-volume
    persistentVolumeClaim:
      claimName: my-pvc-alicek106   # 4. my-pvc-alicek106 라는 이름의 pvc를 사용합니다.
